syntax="proto3";
option go_package="./pb";

service AccountService {
    // create
    rpc CreateAccount(CreateAccountRequest) returns (AccountResponse);

    // get 
    rpc GetAccountByName(AccountNameRequest) returns (AccountResponse);
    rpc GetAccountByPhone(AccountPhoneRequest) returns (AccountResponse);
    rpc GetAccountById(AccountIdRequest) returns (AccountResponse);
} 

message AccountResponse {
    uint32 id = 1;
    string name = 2;
    string phone = 3;
    string password = 4;
    string salt = 5;
    string hashedPassword = 6;
}

message AccountNameRequest {
    string name = 1;
}

message AccountPhoneRequest {
    string phone = 1;
}

message AccountIdRequest {
    uint32 id = 1;
}

message CreateAccountRequest {
    string name = 1;
    string phone = 2;
    string password = 3;
}